@startuml Diagrama de clases
skinparam classAttributeIconSize 0
hide class circle



Class Juego{
  +nuevoJuego(cantidadDeJugadores)
  +atacarAPaís(in paísAtacante:País, in paísDefensor:País)
  +verificarQueDosPaísesSonLimítrofes(in País, in País): Boolean
  +verificarQueDosPaísesNoPertenecenAMismoJugador(in País, in País): Boolean
}

Class TarjetaPais{
    -Pais
    -Simbolo:String
    -activada:Boolean
    +activar(paisesDelJugador):int
}

Class Continente{
    +ejercitoPorContinente(paisesDelJugador): int
    +poblarContinente(unPais)
}

Class Dado{
    -caras:int
    +arrojar(unaCantidad)
}
Class Jugador{
    -Color
    -Nombre
    +colocarEjercitos(unPais, unaCantidad)
    +atacar(paisAtacante, paisDefensor)
    +reagrupar(paisOrigen, paisDestino, cantidadEjercitos)
    +recibirTarjetaPais(unaTarjetaPais)
    activarTarjeta(nombreTarjeta)
    +canjear(tarjeta1, tarjeta2, tarjeta3 )
}
Class País{
    -Nombre
    +atacar(País)
    +serAtacadoPor(Ejercito)
    +moverEjercito(paisDestino, cantidadEjercito)
    +serOcupadoPor(unJugador)
}

abstract estadoOcupacion{
	#Jugador
	+cambiarAOcupado(unJugador, unPais):estadoOcupacion
	+obtenerDuenio():Jugador
	+cambiarADesocupado():estadoOcupacion
}

Class Ejercito{
    +atacar(País)
    +defenderseDe(Ejercito)
    +moverEjercito(paisDestino, cantidadEjercito)
    +ocupar(Pais unPais ,int unaCantidad)
}

interface Objetivo{
    +cumplido(paisesOcupados, unJugador): Boolean
    +mostrarse()
}

/'
Class ObjetivoComun{
    -unaCantidad:int
    +cumplido(paisesOcupados, unJugador): Boolean
    +mostrarse()
}

Class ObjetivoOcupar{
    -continentes
    +cumplido(paisesOcupados, unJugador): Boolean
    +mostrarse()
}

Class ObjetivoDestruir{
    -jugadorADestruir:Jugador
    -jugadorAlternativa:Jugador
    +cumplido(paisesOcupados, unJugador): Boolean
    +mostrarse()
}
'/

Class GestorDeCanje{
    +canjear(targeta1, targeta2, targeta3)
    -calcularRecompensa
}
Class CampoDeBatalla{
    -recompenesa
    -n_canjes
    +iniciarBatalla(ejercitoAtacante, ejercitoDefensor)
    +comparar()
}

Juego *-left- "6" Continente
Juego *-- "50" País
Juego *-down- "2..6" Jugador
Juego --> "*" TarjetaPais
Continente *-down- "1..*" País
País o-up- "1..*" Ejercito
País -left-> estadoOcupacion
Jugador *-left- "*" País
CampoDeBatalla -right-> Dado
Jugador --> "*" Ejercito
Jugador -down- Objetivo
Jugador -right-> "*" TarjetaPais
Jugador *-down- GestorDeCanje
TarjetaPais <.down. GestorDeCanje
'Objetivo <|.down. ObjetivoOcupar
'Objetivo <|.down. ObjetivoDestruir
'Objetivo <|.down. ObjetivoComun
Ejercito ..> CampoDeBatalla


@enduml
